Add GitHub Link

--- a/index.pug
+++ b/index.pug
@@ -11,6 +11,7 @@ html(lang="ja")
       aside
         p(lang="ja") このページは日本語です。
         p(lang="en") This page is in Japanese.
+        p: a(href="https://github.com/tamyam") Github
     main
       article
         section
