--- a/index.pug
+++ b/index.pug
@@ -3,6 +3,7 @@ html(lang="ja")
   head
     meta(charset="utf-8")
     title tamyam
+    meta(name="viewport", content="width=device-width,initial-scale=1")
     link(rel="stylesheet", href="style.css")
     link(rel="stylesheet", href="https://fonts.googleapis.com/css?family=Noto+Sans+JP:100,300&display=swap&subset=japanese")
   body
