--- a/index.pug
+++ b/index.pug
@@ -4,11 +4,14 @@ html(lang="ja")
     meta(charset="utf-8")
     title tamyam
     meta(name="viewport", content="width=device-width,initial-scale=1")
+    meta(http-equiv="X-UA-Compatible", content="IE=edge")
+    meta(name="description", content="tamyamのページ。tamyamがGitHubで公開しているプログラムなどの特徴もまとめたりしている。")
+    link(rel="canonical", href="https://tamyam.github.io")
     link(rel="stylesheet", href="style.css")
     link(rel="stylesheet", href="https://fonts.googleapis.com/css?family=Noto+Sans+JP:100,300&display=swap&subset=japanese")
   body
     header
-      h1 tamyam
+      h1 tamyamのページ
       aside
         p(lang="ja") このページは日本語です。
         p(lang="en") This page is in Japanese.
