tamyamDOMの説明の変更

--- a/index.pug
+++ b/index.pug
@@ -24,7 +24,7 @@ html(lang="ja")
             li
               | tamyamDOM
               ul
-                li 言語はJavaScript
+                li JavaScriptのライブラリ
                 li DOM操作を短いコードで行うことができる
                 li
                   a(href="https://github.com/tamyam/tamyamLibrary/tree/master/tamyamDOM")
