--- a/index.pug
+++ b/index.pug
@@ -27,5 +27,13 @@ html(lang="ja")
                 li JavaScriptのライブラリ
                 li DOM操作を短いコードで行うことができる
                 li
-                  a(href="https://github.com/tamyam/tamyamLibrary/tree/master/tamyamDOM")
-                    | tamyamDOM
+                  a(href="https://github.com/tamyam/tamyamLibrary/tree/master/tamyamDOM") tamyamDOM
+        section
+          h2 tamyamがGitHub Pagesで公開しているJavaScriptのプログラムの一覧
+          ul
+            li
+              | nikespeed
+              ul
+                li HTML/JavaScript/CSSで作られた速度計
+                li
+                  a(href="nikespeed/") nikespeed
